# base-console_bridge

./: CMakeLists.txt  README  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  console.cpp  console.h  console_bridge.pc.in  console_bridgeConfig.cmake
test/: CMakeLists.txt  test_Dummy.cpp
